--- a/README
+++ b/README
@@ -1,1 +1,2 @@
-"G.211.20.0098 - Prima Tjandra Putra" 
+"G.211.20.0098 - Prima Tjandra Putra" Kota Semarang
+stash@{0}: WIP on Pr5-0098-PTP: 213ab73 Merge
